List and edit files

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "scripts": {
         "build:fe": "tsc && vite build",
         "watch:fe": "find src | entr npm run build:fe",
-        "start": "npm run build:fe && bun src/server.ts"
+        "start:be": "bun src/server.ts",
+        "start": "npm run build:fe && npm run start:be"
     },
     "type": "module",
     "license": "MIT",
