--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "@types/node": "24.5.2",
         "typescript": "5.9.2",
         "vite": "7.1.6",
-        "vite-plugin-solid": "2.11.8"
+        "vite-plugin-solid": "2.11.8",
+        "bun": "1.3.3"
     },
     "dependencies": {
         "solid-js": "1.9.9"
