--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "bun": "1.3.3"
     },
     "dependencies": {
-        "solid-js": "1.9.9"
+        "solid-js": "1.9.9",
+        "marked": "17.0.1"
     }
 }
